{
  "sourceLanguage": "en",
  "strings": {
    "Back": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "戻る"
          }
        }
      }
    },
    "Black": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "黒"
          }
        }
      }
    },
    "Blue": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "青"
          }
        }
      }
    },
    "Cancel": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "キャンセル"
          }
        }
      }
    },
    "Clear All": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "すべて消去"
          }
        }
      }
    },
    "Cleared": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "消去しました"
          }
        }
      }
    },
    "Color": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "色"
          }
        }
      }
    },
    "Color & Width": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "色と太さ"
          }
        }
      }
    },
    "Default Paper": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "既定の用紙"
          }
        }
      }
    },
    "Default Pen": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "既定のペン"
          }
        }
      }
    },
    "Delete": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "削除"
          }
        }
      }
    },
    "Display": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "表示"
          }
        }
      }
    },
    "Duplicate": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "複製"
          }
        }
      }
    },
    "Eraser": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "消しゴム"
          }
        }
      }
    },
    "Grid": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "方眼"
          }
        }
      }
    },
    "Handwritten Notes": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "手書きメモ"
          }
        }
      }
    },
    "Language": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "表示言語"
          }
        }
      }
    },
    "Marker": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "マーカー"
          }
        }
      }
    },
    "Match Device": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "端末に合わせる"
          }
        }
      }
    },
    "Medium": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "中"
          }
        }
      }
    },
    "More": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "その他"
          }
        }
      }
    },
    "New Note": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "新規メモ"
          }
        }
      }
    },
    "Note, %@": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "メモ、%@"
          }
        }
      }
    },
    "Paper": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "用紙"
          }
        }
      }
    },
    "Pen": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "ペン"
          }
        }
      }
    },
    "Pin": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "固定"
          }
        }
      }
    },
    "Pinned": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "固定済み"
          }
        }
      }
    },
    "Plain": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "無地"
          }
        }
      }
    },
    "Red": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "赤"
          }
        }
      }
    },
    "Redo": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "やり直す"
          }
        }
      }
    },
    "Ruled": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "罫線"
          }
        }
      }
    },
    "Settings": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "設定"
          }
        }
      }
    },
    "Share as Image": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "画像として共有"
          }
        }
      }
    },
    "Tap the pencil to start writing": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "鉛筆を押して書き始める"
          }
        }
      }
    },
    "Thick": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "太"
          }
        }
      }
    },
    "Thin": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "細"
          }
        }
      }
    },
    "This note will be deleted. This can't be undone.": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "このメモを削除します。元に戻せません。"
          }
        }
      }
    },
    "Undo": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "元に戻す"
          }
        }
      }
    },
    "Unpin": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "固定を解除"
          }
        }
      }
    },
    "Version": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "バージョン"
          }
        }
      }
    },
    "Width": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "太さ"
          }
        }
      }
    },
    "Yellow": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "黄"
          }
        }
      }
    }
  },
  "version": "1.0"
}
